temporary fix for white space on the right

--- a/src/App.css
+++ b/src/App.css
@@ -9,12 +9,12 @@ html {
 
 body {
   margin-top: 25px;
-  max-width: 428px;
+  max-width: 100vw;
   padding: 0;
   margin: 0;
   border-radius: 5px;
   margin: auto;
-  overflow-x: none;
+  overflow-x: hidden;
   
 }
 
