--- a/src/components/Styling/form.css
+++ b/src/components/Styling/form.css
@@ -1,7 +1,7 @@
 .form{
     background-color: white;
     border-radius: 5px;
-    width: 85%;
+    width: 75%;
     margin: 20px auto;
     padding: 20px;
     /* height: 600px; */
@@ -10,6 +10,7 @@
 .form-div{
     border: 1px solid black;
     background-color: #ECECEC;
+    opacity: 0.8;
     border-radius: 10px;
     align-items: center;
     justify-content: center;
@@ -22,10 +23,10 @@
     border-radius: 5px;
     border: 1px solid black;
     box-shadow: rgba(100, 100, 111, 0.3) 0px 7px 29px 0px;
-    margin-left: 10%;
+    margin-left: 5%;
 }
 .form-div p{
-    margin-left: 10%;
+    margin-left: 5%;
     width: 80%;
     margin-bottom: 0;
     margin-top: 0;
@@ -36,7 +37,7 @@
 }
 .form-div textarea{
     width:250px;
-    height:150px
+    height:100px
 }
 .form-div button{
     align-items: center;
